--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@
             {% endfor %}
         </div>
     </div>
-    <div class="ui container">
+    <div class="ui container padding">
         {{ content }}
     </div>
     
