--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,10 @@
     <header class="top">
         <div class="middle">
             <h1>{{ site.title }}</h1>
-            <h2>And so it begins</h2>
+            <h2><em>It's difficult to understand...</em></h2>
         </div>
     </header>
-    <div class="ui four column stackable grid container">
+    <div class="ui four column stackable grid container margin-bottom">
         {{ content }}
 
         {% for post in site.posts %}
