--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
         <div class="ui text container">
             <div class="header item">
                 <a href="/">
-                    Project Name
+                    Home
                 </a>
             </div>
 
@@ -15,7 +15,7 @@
             {% endfor %}
         </div>
     </div>
-    <div class="ui container">
+    <div class="ui container padding text">
         {{ content }}
         
     </div>
